--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Acme&family=Rubik&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+   
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
@@ -27,14 +28,17 @@
 
         <!-- ICONE -->
         <div class="icons">
-            <div class="icon">
+            <!-- <div class="icon">
                 <i class="fas fa-cat"></i>
                 <div class="title">cat</div>
-            </div>
+            </div> -->
         </div>
     </div>
 
     <!-- JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    
     <script src="./js/main.js"></script>
+
 </body>
 </html>
